--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">小工具</string>
+    <string name="app_name">iMoney辅助工具</string>
 
     <string name="sevice_fuzhu">我就是小工具，使用我 可以达到你想要的目的</string>
 </resources>
